# AutoInterp

./: .gitignore  .last_llm.json  CLAUDE.md  LICENSE  Prompt_Overview.md  README.md  __init__.py  __main__.py  config.yaml  main.py  pyproject.toml  question_generator_prompt.txt  requirements.txt
analysis/: agent_analysis.py  analysis_executor.py  analysis_generator.py  analysis_planner.py  codex_analysis.py  evaluator.py  visualization_evaluator.py
arxiv_interp_graph/: README.md  __init__.py  api_client.py  cli.py  config.py  enrich_abstracts.py  enrich_arxiv_ids.py  enrich_missing_urls.py  graph_builder.py  persistence.py  seeds.py  visualization.py
arxiv_interp_graph/analysis/: histograms.py
autocritique/: agent_autocritique.py  agent_revision.py
core/: agent_subprocess.py  codex_runner.py  dashboard_template.py  interactive.py  llm_interface.py  pipeline_ui.py  utils.py
docs/: Prompt_Overview.md  System_Overview.md
logs/: visualization_evaluator_multimodal_log.txt
misc/: TransformerLens_Notes.txt  title.txt
prompts/: agent_analysis.yaml  agent_autocritique.yaml  agent_report_revision.yaml  agent_revision.yaml  analysis_generator.yaml  analysis_planner.yaml  evaluator.yaml  interactive.yaml  prompts.yaml  question_manager.yaml  reporter.yaml  visualization_evaluator.yaml  visualization_generator.yaml  visualization_planner.yaml
questions/: __init__.py  question_manager.py
reporting/: agent_report_revision.py  report_generator.py
scripts/: regenerate_notebook.py
visualization/: visualization_generator.py  visualization_planner.py
(+24 files in other folders)
