[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoInterp"
version = "0.1.0"
description = "Automated interpretability research agent framework."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "AutoInterp Contributors"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
interp-agent = "AutoInterp.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["AutoInterp*"]
